# Yt

./: build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml  encrypt-assets.yml  encrypt-build.yml  gradle.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  ytpro-native.cpp
app/src/main/cpp/scripts/: script.h
app/src/main/res/anim/: dialog_enter.xml  dialog_exit.xml  fade_in.xml  pulse_animation.xml  slide_in_left.xml
app/src/main/res/drawable/: badge_bg.xml  btn_floating.xml  btn_later.xml  btn_update.xml  button_background.xml  button_ripple.xml  control_item_background.xml  dialog_background.xml  dot_blink.xml  fab_background.xml  feature_icon_bg.xml  gradient_background.xml  gradient_background_glow.xml  header_gradient.xml  ic_cast.xml  ic_profile.xml  ic_shorts.xml  ic_subscriptions.xml  ic_upload_plus.xml  ic_you.xml  icon_circle_bg.xml  info_row_bg.xml  loading_circle_inner.xml  loading_circle_outer.xml  loading_dot.xml  nav_glass_background.xml  profile_circle_bg.xml  search_bg.xml  seekbar_progress.xml  seekbar_thumb.xml  status_dot_active.xml  status_dot_inactive.xml  upload_button_background.xml  version_tag_bg.xml  yt_logo.xml
app/src/main/res/drawable-v1/: ic_help.xml  ic_playlist.xml  ic_premium.xml  ic_thumb_up.xml  ic_watch_later.xml
app/src/main/res/layout/: activity_notification.xml  activity_pip_player.xml  activity_splash.xml  activity_you_page.xml  activity_youtube_login.xml  bottom_navigation.xml  custom_header.xml  dialog_premium_settings.xml  (+6 more)
scripts/: bgplay.h  bgplay.js  encrypt.py  js_to_header.py  package.json  script.h  script.js
(+50 files in other folders)
